Switch to less mobile-hostile layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 auto: true
+title: Cucumber Recipes
+tagline: official blog of the book
+author :
+  name : Ian Dees, Matt Wynne, Aslak Hellesøy
+  twitter : cukerecipes
